--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts --exec ts-node"
-    
   },
   "keywords": [],
   "author": "",
@@ -14,12 +13,13 @@
   "devDependencies": {
     "@typegoose/typegoose": "^12.1.0",
     "@types/express": "^4.17.21",
+    "@types/node": "^16.18.79",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^8.1.1"
+    "mongoose": "8.1.0"
   }
 }
