--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@typegoose/typegoose": "^12.1.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^16.18.79",
     "nodemon": "^3.0.3",
@@ -19,6 +20,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "8.1.0"
   }
