--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
   "devDependencies": {
     "@typegoose/typegoose": "^12.1.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/body-parser": "^1.19.5",
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-validator": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^16.18.79",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
@@ -23,8 +28,12 @@
   "dependencies": {
     "-": "^0.0.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "8.1.0"
+    "express-validator": "^7.0.1",
+    "mongoose": "8.1.0",
+    "zod": "^3.22.4"
   }
 }
